@@ -138,7 +138,7 @@
 #define STDC_HEADERS 1
 
 /* Most recent revision number in the version control system */
-#define VCS_REVISION "172"
+#define VCS_REVISION "174"
 
 /* Version number of package */
 #define VERSION "2.9"
